# rack

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  TODO.md  build.rs
.github/workflows/: ci.yml  claude-code-review.yml
examples/: control_parameters.rs  cpal_host.rs  list_plugins.rs  list_vst3_plugins.rs  load_plugin.rs  plugin_gui.rs  preset_browser.rs  process_audio.rs  simple_synth.rs  vst3_processor.rs
rack/: CLAUDE.md  build.rs
rack-sys/: CLAUDE.md  CMakeLists.txt
rack-sys/include/: rack_au.h  rack_vst3.h
rack-sys/src/: au_gui.mm  au_instance.cpp  au_scanner.cpp  rack_au.cpp  stub.cpp  vst3_instance.cpp  vst3_scanner.cpp
rack-sys/test/: test_gui.cpp  test_instance.cpp  test_scanner.cpp
src/: buffer.rs  error.rs  lib.rs  midi.rs  plugin_info.rs  traits.rs
src/au/: ffi.rs  gui.rs  instance.rs  mod.rs  scanner.rs  util.rs
src/vst3/: ffi.rs  instance.rs  instance.rs.bak  mod.rs  scanner.rs  util.rs
